styles/index.css
/* VARIABLES */
:root{
    --darkCOLOR: #000;
    --lightCOLOR: whitesmoke;
    --backgroudCOLOR: papayawhip;
    --highlightCOLOR: yellow;

}
/* RESETS */
*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
} 

html{
    scroll-behavior: smooth;
    
}

body{
    
    font-family: 'Courier New', Courier, monospace;
    background-image: url("/assets/images/pexels-tbee-82256.jpg");
    background-size: cover;
}

img{
    display: block;
}

h1,h2,h3,h4,h5,h6{
    color: var(--darkCOLOR);
    font-weight: 900;
}

a:any-link{
    text-decoration: none;
    color: var(--darkCOLOR);
    transition: all 0.5s ease;
}

a:hover,
a:focus{
    font-weight: 900;
}

img{
    width: 100%;
}
/*END RESETS*/

/* UTILITY */
.section-height{
    min-height: 100vh;
    height: 100%;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
    border-bottom: 2.5px solid rgba(0, 0, 0, 0.438);

}

.highlight{
    font-weight: bolder;
    color: var(--darkCOLOR);
}

.nowrap{
    white-space: nowrap;
}
/* END UTILITY */

/*NAVIGATION*/
.navbar .navbar-toggler-icon:hover {
    animation: nav-animation 0.5s ease 0s 1 forwards;
    animation: name duration timing-function delay iteration-count direction fill-mode;
}

@keyframes nav-animation {
    from{
        transform: rotate(0deg);
    }
    to{
        transform: rotate(90deg);
    }
}




.navbar a span{
    color: var(--lightCOLOR);
    transition: all 0.5s ease;
}
.navbar a span:hover{
    color: var(--highlightCOLOR);
    transform: scale(1.1);
}

.navbar .nav-link {
    font-weight: bold;
    text-transform: uppercase;
    color: var(--darkCOLOR);
    transition: all 0.5s ease;
}

.navbar .nav-link:hover,
.navbar .nav-link:focus,
.navbar .nav-link:active{
    color: yellow;
    letter-spacing: 0.15em;
}




@media screen and (min-width:992px){
    .content-container{
        padding-left: 15%;
    }

    .navbar{
        min-height: 100vh;
        width: 15%;
        background-image: var(--darkCOLOR);
        background-size: cover;
        background-position: center;
    }
    
    .navbar-brand img{
        border: 5px solid gold;
    }
    
    .navbar-brand img:hover{
        animation: logoRotate 3s ease 0s infinite forwards;
    }
    
    @keyframes logoRotate {
        from{
            transform: rotateY(0deg); 
        }
        to {
            transform: rotateY(360deg);
        }
    }
}

/* #projects{
    scroll-margin-block-start: 500px;
} */

/* END NAVIGATION */

/* BUTTONS */
#home .btn{
    border: 2px solid var(--darkCOLOR);
    font-weight: bold;

}

#home .btn:hover,
#home .btn:focus{
    background-color: var(--darkCOLOR);
    color: var(--highlightCOLOR);
}


/* CUSTOM LINK */
.link-custom{
    font-weight: bold;
    position: relative;
}

.link-custom::after{
    content: "";
    position: absolute;
    width: 0%;
    height: 2px;
    left: 0;
    top: 110%;
    transition: all 0.5s ease;
    background-color: var(--darkCOLOR);
}

.link-custom:hover::after{
    width: 100%;
}

/* EXPERIENCE SECTION */

/* EDUCATION */
#experience .education-section h3{
    position: relative;
}

#experience .education-section h3::after{
    content: "";
    position: absolute;
    width: 0%;
    height: 2px;
    left: 25%;
    top: 85%;
    transition: all 0.5s ease;
    background-color: var(--darkCOLOR);
}

#experience .education-section h3:hover::after {
    width: 50%;
}

#experience .education-section .box{
    border: 2px solid var(--darkCOLOR);
    border-radius: 1rem;
    padding: 0.5em;
    background-image: url(/assets/images/pexels-tbee-82256.jpg);
    background-size: cover;
    color: var(--darkCOLOR);
    transition: all 0.5s ease;
}

#experience .education-section .box:hover{
    transform: scale(0.95);
}


/* WORK */

#experience .work-section h3{
    position: relative;
}

#experience .work-section h3::after{
    content: "";
    position: absolute;
    width: 0%;
    height: 2px;
    left: 35%;
    top: 85%;
    transition: all 0.5s ease;
    background-color: var(--darkCOLOR);
}

#experience .work-section h3:hover::after {
    width: 30%;
}

#experience .work-section .box {
    border: 2px solid var(--darkCOLOR);
    border-radius: 1rem;
    padding: 0.5em;
    background-image: url(/assets/images/pexels-tbee-82256.jpg);
    background-size: cover;
    color: var(--darkCOLOR);
    transition: all 0.5s ease;
}

#experience .work-section .box:hover{
    transform: scale(0.95);
}


/* SKILLS */
#experience .skills-section h3{
    position: relative;
}

#experience .skills-section h3::after{
    content: "";
    position: absolute;
    width: 0%;
    height: 2px;
    left: 30%;
    top: 85%;
    transition: all 0.5s ease;
    background-color: var(--darkCOLOR);
}

#experience .skills-section h3:hover::after {
    width: 40%;
}

#experience .skills-section ul {
    border: 2px solid var(--darkCOLOR);
    border-radius: 1rem;
    padding: 0.5em;
    background-color: #000;
    color: var(--highlightCOLOR);
}

/* END EXPERIENCE SECTION */


/* PROJECT SECTION */
#projects .html-project {
    border: 2px solid var(--darkCOLOR);
    border-radius: 1rem;
    background-image: url(/assets/images/pexels-tbee-82256.jpg);
    background-size: cover;
    transition: all 0.5s ease;
}

#projects .html-project:hover,
#projects .html-project:focus{
    transform: scale(0.95);
}

#projects .html-project figure img{
    border-radius: 1rem;
    min-width: 17rem;
    max-width: 45%;
}

#projects .css-project {
    border: 2px solid var(--darkCOLOR);
    border-radius: 1rem;
    background-image: url(/assets/images/pexels-tbee-82256.jpg);
    background-size: cover;
    transition: all 0.5s ease;
}

#projects .css-project:hover,
#projects .css-project:focus{
    transform: scale(0.95);
}

#projects .css-project figure img {
    border-radius: 1rem;
    min-width: 17rem;
    max-width: 50%;
}

#projects .bootstrap-project {
    border: 2px solid var(--darkCOLOR);
    border-radius: 1rem;
    background-image: url(/assets/images/pexels-tbee-82256.jpg);
    background-size: cover;
    transition: all 0.5s ease;
}

#projects .bootstrap-project:hover,
#projects .bootstrap-project:focus{
    transform: scale(0.95);
}

#projects .bootstrap-project figure img{
    border-radius: 1rem;
    min-width: 17rem;
    max-width: 75%;
}

/* PROJECT SECTION BUTTONS */
#projects .html-project .btn-group a,
#projects .bootstrap-project .btn-group a,
#projects .css-project .btn-group a{
    border: 2px solid var(--darkCOLOR);
    transition: all 0.5s ease;
}

#projects .html-project .btn-group a:hover,
#projects .html-project .btn-group a:focus,
#projects .bootstrap-project .btn-group a:hover,
#projects .bootstrap-project .btn-group a:focus,
#projects .css-project .btn-group a:hover,
#projects .css-project .btn-group a:focus{
    background-color: var(--darkCOLOR);
    color: var(--highlightCOLOR);
    transform: scale(1.1);
}

/* END PROJECT SECTION */

